<resources>
    <string name="app_name">FitnessAndroid</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_login">Ingresar</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email         completions.     "</string>
    <color name="lightB">#e1e1e1</color>
    <color name="lightW">#ffffff</color>
    <string name="title_activity_room_pic">RoomPic</string>
    <string name="button_Tutoriales">Tutorials</string>
    <string name="button_Account">Account</string>
    <string name="button_logout">Log Out</string>
    <string name="button_Search_User">Search User</string>
    <string name="myName">Name:</string>
    <string name="myState">"State: "</string>
    <string name="myCountry">Country:</string>
    <string name="myBirthday">"Birthday: "</string>
    <string name="myGenre">"Gender: "</string>
    <string name="button_state">Update State</string>
    <string name="butto_register">Register</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="prompt_complete_name">Name</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_country">Country</string>
    <string name="prompt_status">Status</string>
    <string name="button_save_user_info">Save</string>
    <string name="button_send">Send</string>
    <string name="text_routine">Share Routine</string>
    <string name="search_box">Search Here...</string>
    <string name="myUsername">"Username: "</string>
    <string name="user_upload_date">"Date Uploaded: "</string>
    <string name="button_edit">Edit</string>
    <string name="button_delete">Delete</string>
    <string name="button_update">Update</string>
    <string name="button_cancel">Cancel</string>
    <string name="text_birthday">Birthday</string>
</resources>
