<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.issac.fitnessandroid.MainActivity">
    <!-- "Mark Favorite", should appear as action button if possible -->

    <item android:id="@+id/action_tutoriales"
        android:title="@string/button_Tutoriales"
        app:showAsAction="never"/>

    <item android:id="@+id/buscar_usuario"
        android:title="@string/button_Search_User"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_account"
        android:title="@string/button_Account"
        app:showAsAction="never"/>

    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_logout"
        android:title="@string/button_logout"
        app:showAsAction="never"/>



</menu>
