<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context="com.example.issac.fitnessandroid.AjustesActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/setup_profile_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:paddingTop="25dp"
        android:src="@drawable/profile" />

    <EditText
        android:id="@+id/setup_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/setup_fullname"
        android:layout_alignStart="@+id/setup_fullname"
        android:layout_below="@+id/setup_profile_image"
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890"
        android:inputType="textFilter"
        android:layout_marginRight="7dp"
        android:layout_marginTop="22dp"
        android:background="@color/lightW"
        android:drawableLeft="@drawable/username"
        android:ems="10"
        android:hint="@string/prompt_username"
        android:padding="14dp"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/setup_fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/setup_username"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginTop="5dp"
        android:inputType="textCapWords"
        android:background="@color/lightW"
        android:drawableLeft="@drawable/name"
        android:ems="10"
        android:hint="@string/prompt_complete_name"
        android:padding="14dp"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/setup_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/setup_country_name"
        android:layout_alignLeft="@+id/setup_country_name"
        android:layout_alignRight="@+id/setup_country_name"
        android:layout_alignStart="@+id/setup_country_name"
        android:layout_below="@+id/setup_fullname"
        android:inputType="textCapSentences|textMultiLine"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:background="@color/lightW"
        android:drawableLeft="@drawable/country"
        android:ems="10"
        android:hint="@string/prompt_status"
        android:padding="14dp"
        android:textAlignment="center" />

    <Button
        android:id="@+id/button_country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/setup_status"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginTop="5dp"
        android:background="@color/lightW"
        android:ems="10"
        android:hint="@string/prompt_country"
        android:padding="14dp"
        android:textSize="18sp"
        android:textAlignment="center" />


    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/Birthday"
        android:clickable="true"
        android:editable="false"
        android:background="@color/lightW"
        android:hint="@string/text_birthday"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:focusable="false"
        android:layout_below="@id/button_country"
        android:layout_marginTop="5dp"
        android:padding="14dp"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/setup_information_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Birthday"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/button_save_user_info"
        android:textColor="@color/lightW"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>
