<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.issac.fitnessandroid.ProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/my_profile_pic"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:src="@drawable/profile"/>

            <TextView
                android:id="@+id/my_profile_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/my_profile_pic"
                android:layout_marginTop="5dp"
                android:text="@string/myName"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/lightW"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/my_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Username"
                android:layout_below="@+id/my_profile_full_name"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/lightW"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/my_profile_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/my_username"
                android:layout_marginTop="5dp"
                android:text="@string/myState"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/lightW"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/my_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/my_profile_status"
                android:layout_marginTop="60dp"
                android:text="@string/myCountry"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/lightW"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/my_dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/my_country"
                android:layout_marginTop="2dp"
                android:text="@string/myBirthday"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/lightW"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/my_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Género"
                android:layout_below="@+id/my_dob"
                android:layout_marginTop="2dp"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/lightW"
                android:textSize="18sp"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
